# teth

./: .hlint.yaml  README.md  flake.nix  teth.cabal  teth.nix
app/: Main.hs
src/: Main.hs
