cabal-version:      3.0

name:               teth
version:            0.0.0.0
synopsis:           A text editor in haskell

license:            AGPL-3.0-or-later
license-file:       LICENSE

author:             Carter Ison
maintainer:         carter@isons.org
copyright: Copyright (C) 2023  Carter "pyrotelekinetic" Ison <carter@isons.org>

build-type:         Simple

extra-doc-files:    README.md

common options
    ghc-options:
        -Wall
        -Wno-unused-do-bind
        -threaded

executable teth
    import:           options

    default-extensions:
      OverloadedStrings
      LambdaCase

    main-is:          Main.hs

    -- Libraries are locked to the version used by nix. Hopefully this will make
    -- cabal builds as similar to nix builds as possible. The library versions
    -- are obtained by entering the nix dev-shell and checking the output of
    -- 'ghc-pkg list'.
    build-depends:
        , base == 4.16.4.0
        , vty == 5.37
        , yi-rope == 0.11
        , text == 1.2.5.0

    hs-source-dirs:   app

    default-language: GHC2021
